--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="index.html">QuizApp</a>
-            <img src="images/quiz logo 2.jpg"width="80" height="60" alt="logo">
+            <img src="quiz logo 2.jpg"width="80" height="60" alt="logo">
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
